# shityEngine

./: CMakeLists.txt  Makefile
include/: shityEngine.h
include/logging/: logging.h
include/objects/: shityObject.h
include/renderer/: common.h  ebo.h  shader.h  vbo.h
include/window/: window.h
src/: fragmentShader.glsl  main.cpp  shityEngine.cpp  vertexShader.glsl
src/engine/renderer/: common.h  ebo.cpp  ebo.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/objects/: shityObject.cpp
src/renderer/: ebo.cpp  renderer.cpp  shader.cpp  vao.cpp  vbo.cpp
src/window/: window.cpp  window.h
test/: fragmentShader.glsl  main.cpp  test.cpp  test.h  testClear.cpp  testClear.h  testTriangle.cpp  testTriangle.h  triangleFrag.glsl  triangleVert.glsl
